Fix careers page on mobile

--- a/inc/main.css
+++ b/inc/main.css
@@ -1282,8 +1282,13 @@ H1.year {
   }
 }
 
-@media only screen and (max-width: 768px) {
-  /* Tablet */
+@media only screen and (max-width: 700px) {
+  .one-third, .two-third {
+    float: none;
+    width: 100%;
+    margin-right: 0;
+  }
+  .one-third.last { margin-top: 2em; }
 }
 
 @media only screen and (max-width: 600px) {
